--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-19.jpg
+featured_image: /assets/images/posts/ink-2020-20.jpg
 featured: true
 hidden: true
 ---
@@ -173,12 +173,12 @@ Them dragon-horses be tripping!
 
 A pair of *Riabininohadros* (an iguanodont from Late Cretaceous Ukraine) share some psychedelic mushrooms.  Reindeer are known to purposefully consume the mind-altering *Amanita muscaria* and even fight each other over mushroom availability; this is just one example of [drug use among animals](https://i.imgur.com/0peuxOk.jpg).  I wouldn't be surprised if non-avian dinosaurs liked to feel good sometimes too.
 
-<!-- #### Day 20: Coral
+#### Day 20: Coral
 ![coral](/assets/images/posts/ink-2020-20.jpg)
 
 *Vallibonavenatrix* is a new genus of spinosaurid from Early Cretaceous Spain.  With the new *Spinosaurus* swimmy tail discovered this year, we now know that these dinosaurs were even more convergent with crocs than previously thought.  Giving *Vallibonavenatrix* a laterally compressed tail makes her look just like a long-legged saltwater crocodile.
 
-#### Day 21: Sleep
+<!-- #### Day 21: Sleep
 ![sleep](/assets/images/posts/ink-2020-21.jpg)
 
 Here's the new small basal ornithopod, *Changmiania*, from Early Cretaceous China.  This dinosaur is known from two beautifully-preserved complete skeletons that were buried intact when their burrows collapsed.  Further evidence for a fossorial lifestyle includes adaptations such as a shovel-like snout and extended shoulder blades for anchoring powerful arm muscles.  The name means "eternal sleep," since the skeletons were preserved in lifelike sleeping positions.
