niche and ink 21

--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-20.jpg
+featured_image: /assets/images/posts/ink-2020-21.jpg
 featured: true
 hidden: true
 ---
@@ -178,14 +178,14 @@ A pair of *Riabininohadros* (an iguanodont from Late Cretaceous Ukraine) share s
 
 *Vallibonavenatrix* is a new genus of spinosaurid from Early Cretaceous Spain.  With the new *Spinosaurus* swimmy tail discovered this year, we now know that these dinosaurs were even more convergent with crocs than previously thought.  Giving *Vallibonavenatrix* a laterally compressed tail makes her look just like a long-legged saltwater crocodile.
 
-<!-- #### Day 21: Sleep
+#### Day 21: Sleep
 ![sleep](/assets/images/posts/ink-2020-21.jpg)
 
 Here's the new small basal ornithopod, *Changmiania*, from Early Cretaceous China.  This dinosaur is known from two beautifully-preserved complete skeletons that were buried intact when their burrows collapsed.  Further evidence for a fossorial lifestyle includes adaptations such as a shovel-like snout and extended shoulder blades for anchoring powerful arm muscles.  The name means "eternal sleep," since the skeletons were preserved in lifelike sleeping positions.
 
-The ["official" reconstruction](https://www.smithsonianmag.com/smart-news/new-species-burrowing-dinosaur-discovered-china-180975903/) of the holotype shows a fluffy, but somewhat skinny, dinosaur, whose anatomy is easily digestible by the viewer; I wanted to take a different approach.  My *Changmiania* is a dinosaur equivalent to the [golden mole](https://alphynix.tumblr.com/post/619929572405821442/arsanatomica-the-chronicles-of-potato-mole), which is a bizarre, eyeless, iridescent, potatolike afrotherian from the deserts of southern Africa whose skeleton looks like that of a perfectly normal-shaped small mammal.  Check out the [inside view]()!
+The ["official" reconstruction](https://www.smithsonianmag.com/smart-news/new-species-burrowing-dinosaur-discovered-china-180975903/) of the holotype shows a fluffy, but somewhat skinny, dinosaur, whose anatomy is easily digestible by the viewer; I wanted to take a different approach.  My *Changmiania* is a dinosaur equivalent to the [golden mole](https://alphynix.tumblr.com/post/619929572405821442/arsanatomica-the-chronicles-of-potato-mole), which is a bizarre, eyeless, iridescent, potatolike afrotherian from the deserts of southern Africa whose skeleton looks like that of a perfectly normal-shaped small mammal.  Check out the [inside view](https://imgur.com/gallery/0l9js25)!
 
-#### Day 22: Chef
+<!-- #### Day 22: Chef
 ![chef](/assets/images/posts/ink-2020-22.jpg)
 
 "Chef" was a difficult one to relate to dinosaurs, since animals don't do a lot of food preparation.  The only things I could think of were burying food and digging it up later, like a dog, monkey, or corvid, and washing food like a raccoon.  The latter is more of a chef-like behavior, since burying food is arguably just for the purpose of caching rather than food preparation.  So here's *Dineobellator* (meaning "Navajo warrior"), the new velociraptorine from Latest Cretaceous New Mexico, washing *Meniscoessus*, a multituberculate mammal.
