--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-21.jpg
+featured_image: /assets/images/posts/ink-2020-22.jpg
 featured: true
 hidden: true
 ---
@@ -185,7 +185,7 @@ Here's the new small basal ornithopod, *Changmiania*, from Early Cretaceous Chin
 
 The ["official" reconstruction](https://www.smithsonianmag.com/smart-news/new-species-burrowing-dinosaur-discovered-china-180975903/) of the holotype shows a fluffy, but somewhat skinny, dinosaur, whose anatomy is easily digestible by the viewer; I wanted to take a different approach.  My *Changmiania* is a dinosaur equivalent to the [golden mole](https://alphynix.tumblr.com/post/619929572405821442/arsanatomica-the-chronicles-of-potato-mole), which is a bizarre, eyeless, iridescent, potatolike afrotherian from the deserts of southern Africa whose skeleton looks like that of a perfectly normal-shaped small mammal.  Check out the [inside view](https://imgur.com/gallery/0l9js25)!
 
-<!-- #### Day 22: Chef
+#### Day 22: Chef
 ![chef](/assets/images/posts/ink-2020-22.jpg)
 
 "Chef" was a difficult one to relate to dinosaurs, since animals don't do a lot of food preparation.  The only things I could think of were burying food and digging it up later, like a dog, monkey, or corvid, and washing food like a raccoon.  The latter is more of a chef-like behavior, since burying food is arguably just for the purpose of caching rather than food preparation.  So here's *Dineobellator* (meaning "Navajo warrior"), the new velociraptorine from Latest Cretaceous New Mexico, washing *Meniscoessus*, a multituberculate mammal.
@@ -194,7 +194,7 @@ A couple things were challenging about this piece.  As an adaptation for graspin
 
 I guess drawing dinosaurs from front or back view is another theme this Inktober.
 
-#### Day 23: Rip
+<!-- #### Day 23: Rip
 ![rip](/assets/images/posts/ink-2020-23.jpg)
 
 Thank goodness for *Gnathomortis*!  I was worried we weren't going to see any new mosasaur genera this year, but this guy was named just in time for Inktober!
