--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-22.jpg
+featured_image: /assets/images/posts/ink-2020-23.jpg
 featured: true
 hidden: true
 ---
@@ -194,7 +194,7 @@ A couple things were challenging about this piece.  As an adaptation for graspin
 
 I guess drawing dinosaurs from front or back view is another theme this Inktober.
 
-<!-- #### Day 23: Rip
+#### Day 23: Rip
 ![rip](/assets/images/posts/ink-2020-23.jpg)
 
 Thank goodness for *Gnathomortis*!  I was worried we weren't going to see any new mosasaur genera this year, but this guy was named just in time for Inktober!
@@ -203,7 +203,7 @@ Mosasaurs were lizards, possibly relatives of monitors, possibly relatives of sn
 
 I was inspired by my fellow paleo Inktober participant, u/jupiter1390, who on Day 2 did a beautiful depiction of bioluminescent squid using white ink.  I asked what kind of white pen they used, ordered them, and here we are.  It'll take some getting used to, but I'm happy with how this one turned out at least!
 
-#### Day 24: Dig
+<!-- #### Day 24: Dig
 ![dig](/assets/images/posts/ink-2020-24.jpg)
 
 This is *Mirusavis*, a small enantiornithine bird from Early Cretaceous China.  Its holotype preserves a ridiculous amount of **medullary bone**, which is a type of bone formed temporarily in females as a calcium reserve for producing eggshells.  Other dinosaurs and modern birds are known to have medullary bone deposits in their leg bones, but *Mirusavis* had it everywhere, including the ribs, vertebrae, and arm bones.  This indicates that *Mirusavis*'s eggs would have been very large compared to its body size--estimated at 20%, comparable to the massive egg of the diminutive kiwi bird today.  And a large egg indicates **precociality**, meaning *Mirusavis* chicks would have been born ready to run, fly, and feed themselves.
@@ -234,5 +234,25 @@ I've given my *Dynamosuchus* cryptic coloring like a jaguar, for hiding amongst 
 This is *Wulong*, meaning "dancing dragon," a new microraptorine (four-winged "raptor" dinosaur) from Early Cretaceous China.  This one is doing a mating song and dance akin to a frigatebird, inflating its colorful display pouch for the females to see.
 
 Even though bird wings are pretty constrained by their function, there is still diversity in their shape, posture, and feathering.  Usually I see microraptorines depicted with songbird-like rounded wings; this one has more angular wings.  On a creature this size maybe that doesn't make sense, but it looks kind of cool and unusual.
+
+#### Day 28: Float
+![float](/assets/images/posts/ink-2020-28.jpg)
+
+Did you know that ankylosaurs (the armored, sometimes club-tailed dinosaurs) almost always fossilize upside-down?  It's because of a phenomenon called "bloat-n-float".  If a dead ankylosaur ends up in the water, the gases that build up in its belly during decomposition combined with the heavy osteoderm armor on its back cause the animal to flip over.  Eventually, the gases are released (sometimes explosively) and the carcass sinks and possibly fossilizes.
+
+Here, a *Sinankylosaurus* corpse floats in a lake.  A nanhsiungchelyid turtle climbs aboard to rest.
+
+#### Day 29: Shoes
+![shoes](/assets/images/posts/ink-2020-29.jpg)
+
+You didn't think I'd be able to relate "shoes" to dinosaurs, did you?  Well, here is *Citipes* (meaning "fleet foot"), a caenagnathid oviraptorosaur who has put his foot through a beehive.  Was it on purpose, to eat the wax and grubs?  Or was it a discarded hive he accidentally stepped in?
+
+#### Day 29: Ominous
+![ominous](/assets/images/posts/ink-2020-30.jpg)
+
+That's no fish--it's *Ophthalmothule*, a new cryptoclidid plesiosaur (one of the "Nessie" type aquatic reptiles).  It had huge eye sockets and was found in far northern marine deposits, indicating that it was an abyssal or nocturnal hunter.
+
+Deep-water animals are always so scary.  I gave mine some bioluminescent spots so he can see a bit; I'm not sure how realistic that would be for a diapsid reptile.
+
 
 -->
