--- a/_posts/2020-10-21-niche.md
+++ b/_posts/2020-10-21-niche.md
@@ -10,12 +10,12 @@ featured: true
 hidden: true
 ---
 
-Niche partitioning is a really fundamental concept in ecology that influences the way organisms live, compete, and evolve.  In this post, I’m going to go over what exactly it means, how it works, and some interesting non-standard examples.
+Niche partitioning is a really fundamental concept in ecology that influences the way organisms live, compete, and evolve.  In this post, I’m going to go over what exactly it means, how it works, and some interesting fossil examples.
 
 ### Overview
 
 #### What is a niche?
-A **niche** is a role within an ecosystem that a species can fill.  It describes both the way the environment affects the organism, such as through resource abundance, predator habits, or disease, and the way the animal affects the environment.  For example, the role of Fleet-Footed Grazing Herbivore in the biome California Chaparral is filled by the mule deer, while in the similar Australian Scrubland biome, this role is filled by the kangaroo.  (Deerlike terminology is sometimes applied to kangaroos, with the males being called bucks and the females, does.  I'm not sure whether this has to do with percieved niche or morphological similarity with deer or is just coincidence.)  Desipte the drastic differences in appearance, lineage, and functionality between deer and kangaroo, they are able to interact with their similar environments in much the same way.  If deer and kangaroo coexisted in the same place--say, if kangaroos were brought to California--they would compete with one another.
+A **niche** is a role within an ecosystem that a species can fill.  It describes both the way the environment affects the organism, such as through resource abundance, predator habits, or disease, and the way the animal affects the environment.  For example, the role of Fleet-Footed Grazing Herbivore in the biome California Chaparral is filled by the mule deer, while in the similar Australian Scrubland biome, this role is filled by the kangaroo.  (Deerlike terminology is sometimes applied to kangaroos, with the males being called bucks and the females, does.  I'm not sure whether this has to do with percieved niche or morphological similarity with deer or if it's just coincidence.)  Desipte the drastic differences in appearance, lineage, and functionality between deer and kangaroo, they are able to interact with their similar environments in much the same way.  If deer and kangaroo coexisted in the same place--say, if kangaroos were brought to California--they would compete with one another.
 
 Here's a temporal example rather than spacial.  The role of Large Grazing Herbivore in the ecosystem American Plains used to be filled by the American bison, but is now filled by the domestic cow.  Cows and bison digest grass and produce dung that acts as a home for grubs, fungi, and microorganisms, and fertilizer for new grass to grow.  They stir up bugs by walking through grass, which creates opportunities for insectivores to follow behind and pick them off.  By forming depressions in the ground where they lay down, they also create little rainwater ponds that are important for frogs.  All these functions are part of the niche, but despite its complexity two different types of animal can perform almost the same role.
 
