--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-23.jpg
+featured_image: /assets/images/posts/ink-2020-24.jpg
 featured: true
 hidden: true
 ---
@@ -203,7 +203,7 @@ Mosasaurs were lizards, possibly relatives of monitors, possibly relatives of sn
 
 I was inspired by my fellow paleo Inktober participant, u/jupiter1390, who on Day 2 did a beautiful depiction of bioluminescent squid using white ink.  I asked what kind of white pen they used, ordered them, and here we are.  It'll take some getting used to, but I'm happy with how this one turned out at least!
 
-<!-- #### Day 24: Dig
+#### Day 24: Dig
 ![dig](/assets/images/posts/ink-2020-24.jpg)
 
 This is *Mirusavis*, a small enantiornithine bird from Early Cretaceous China.  Its holotype preserves a ridiculous amount of **medullary bone**, which is a type of bone formed temporarily in females as a calcium reserve for producing eggshells.  Other dinosaurs and modern birds are known to have medullary bone deposits in their leg bones, but *Mirusavis* had it everywhere, including the ribs, vertebrae, and arm bones.  This indicates that *Mirusavis*'s eggs would have been very large compared to its body size--estimated at 20%, comparable to the massive egg of the diminutive kiwi bird today.  And a large egg indicates **precociality**, meaning *Mirusavis* chicks would have been born ready to run, fly, and feed themselves.
@@ -214,7 +214,7 @@ The weird thing is that the male turkey has no idea what his mound is for.  He f
 
 Nature is very strange.  Life finds a way.
 
-#### Day 25: Buddy
+<!-- #### Day 25: Buddy
 ![buddy](/assets/images/posts/ink-2020-25.jpg)
 
 *Schleitheimia* was a sauropodomorph closely related to the much better known *Plateosaurus*, from Late Triassic Switzerland.  It's known from only fragmentary remains, so I based my reconstruction mostly on *Plateosaurus*.
@@ -252,7 +252,7 @@ You didn't think I'd be able to relate "shoes" to dinosaurs, did you?  Well, her
 
 That's no fish--it's *Ophthalmothule*, a new cryptoclidid plesiosaur (one of the "Nessie" type aquatic reptiles).  It had huge eye sockets and was found in far northern marine deposits, indicating that it was an abyssal or nocturnal hunter.
 
-Deep-water animals are always so scary.  I gave mine some bioluminescent spots so he can see a bit; I'm not sure how realistic that would be for a diapsid reptile.
+Deep-water animals are always so scary.  I gave mine some bioluminescent spots so he can see a bit, but I'm not sure how realistic that would be for a diapsid reptile.  I also fear I may have made him too fishlike.  I was going for a fish-convergent face shape, but it ended up looking kind of just like a barracuda.
 
 
 -->
