--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -214,14 +214,14 @@ The weird thing is that the male turkey has no idea what his mound is for.  He f
 
 Nature is very strange.  Life finds a way.
 
-<!-- #### Day 25: Buddy
+#### Day 25: Buddy
 ![buddy](/assets/images/posts/ink-2020-25.jpg)
 
 *Schleitheimia* was a sauropodomorph closely related to the much better known *Plateosaurus*, from Late Triassic Switzerland.  It's known from only fragmentary remains, so I based my reconstruction mostly on *Plateosaurus*.
 
 Modern crocodilians are known to team up with ground-nesting birds to share nest-guarding duties.  The crocs can scare off large animals that threaten to trample the birds' eggs, and the birds can chase away egg-breaking lizards and other small, nimble threats.  Here, *Schleitheimia* forms a similar partnership with *Procompsognathus*, of *Jurassic Park 2* fame.  *Procompsognathus* is not related to true compsognathids, but rather is a very small coelophysoid.  But since as I said on Day 18, compsognathids closely resemble dinosaurs' ancestral form, it's not really a surprise that older dinosaurs would have looked very similar.
 
-#### Day 26: Hide
+<!-- #### Day 26: Hide
 ![hide](/assets/images/posts/ink-2020-26.jpg)
 
 *Dynamosuchus* was a bobcat-sized ornithosuchid pseudosuchian from early Late Triassic Brazil.  Ornithosuchids (meaning "bird croc" for some reason) were an early branch off the main croc tree that kind of pioneered the quadrupedal terrestrial predator strategy that would be further explored later by more famous pseudosuchians like *Fasolasuchus*, *Postosuchus*, and *Saurosuchus*.  Only four other genera of ornithosuchid are known, so the description of *Dynamosuchus* increases their diversity by 25%!
