--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-24.jpg
+featured_image: /assets/images/posts/ink-2020-26.jpg
 featured: true
 hidden: true
 ---
@@ -16,7 +16,7 @@ It's that time of year again!  I'm really excited to compare my efforts this yea
 
 Last year I challenged myself to relate each prompt word to a Mesozoic reptile.  This year I'll do the same, but with the additional challenge of only drawing 2020 novataxa--that is, Mesozoic reptile genera named this year.  Don't worry, there are lots to choose from!
 
-Note that since the month isn't over, there're only a few drawings up so far.  I will update this post every day with a new one, so please check back to see more of my work later!
+Note that since the month isn't over, not all the drawings are posted yet.  I will update this post every day with a new one, so please check back to see more of my work later!
 
 #### Day 1: Fish
 ![fish](/assets/images/posts/ink-2020-1.jpg)
@@ -221,14 +221,14 @@ Nature is very strange.  Life finds a way.
 
 Modern crocodilians are known to team up with ground-nesting birds to share nest-guarding duties.  The crocs can scare off large animals that threaten to trample the birds' eggs, and the birds can chase away egg-breaking lizards and other small, nimble threats.  Here, *Schleitheimia* forms a similar partnership with *Procompsognathus*, of *Jurassic Park 2* fame.  *Procompsognathus* is not related to true compsognathids, but rather is a very small coelophysoid.  But since as I said on Day 18, compsognathids closely resemble dinosaurs' ancestral form, it's not really a surprise that older dinosaurs would have looked very similar.
 
-<!-- #### Day 26: Hide
+#### Day 26: Hide
 ![hide](/assets/images/posts/ink-2020-26.jpg)
 
 *Dynamosuchus* was a bobcat-sized ornithosuchid pseudosuchian from early Late Triassic Brazil.  Ornithosuchids (meaning "bird croc" for some reason) were an early branch off the main croc tree that kind of pioneered the quadrupedal terrestrial predator strategy that would be further explored later by more famous pseudosuchians like *Fasolasuchus*, *Postosuchus*, and *Saurosuchus*.  Only four other genera of ornithosuchid are known, so the description of *Dynamosuchus* increases their diversity by 25%!
 
 I've given my *Dynamosuchus* cryptic coloring like a jaguar, for hiding amongst leaf litter.
 
-#### Day 27: Music
+<!-- #### Day 27: Music
 ![music](/assets/images/posts/ink-2020-27.jpg)
 
 This is *Wulong*, meaning "dancing dragon," a new microraptorine (four-winged "raptor" dinosaur) from Early Cretaceous China.  This one is doing a mating song and dance akin to a frigatebird, inflating its colorful display pouch for the females to see.
@@ -247,12 +247,15 @@ Here, a *Sinankylosaurus* corpse floats in a lake.  A nanhsiungchelyid turtle cl
 
 You didn't think I'd be able to relate "shoes" to dinosaurs, did you?  Well, here is *Citipes* (meaning "fleet foot"), a caenagnathid oviraptorosaur who has put his foot through a beehive.  Was it on purpose, to eat the wax and grubs?  Or was it a discarded hive he accidentally stepped in?
 
-#### Day 29: Ominous
+#### Day 30: Ominous
 ![ominous](/assets/images/posts/ink-2020-30.jpg)
 
 That's no fish--it's *Ophthalmothule*, a new cryptoclidid plesiosaur (one of the "Nessie" type aquatic reptiles).  It had huge eye sockets and was found in far northern marine deposits, indicating that it was an abyssal or nocturnal hunter.
 
 Deep-water animals are always so scary.  I gave mine some bioluminescent spots so he can see a bit, but I'm not sure how realistic that would be for a diapsid reptile.  I also fear I may have made him too fishlike.  I was going for a fish-convergent face shape, but it ended up looking kind of just like a barracuda.
 
+#### Day 31: Crawl
+![crawl](/assets/images/posts/ink-2020-31.jpg)
 
+*Gunakadeit* was a thalattosaur from Late Triassic Alaska.  Thalattosaurs were a mysterious lineage of diapsid reptiles adapted to an aquatic lifestyle that only existed in the Triassic, that weird interbellum period between two of the Big Five mass extinctions, the Great Dying and the T-J boundary.  It's thought that they laid soft-shelled eggs like many other diapsid reptiles, and thus would have had to haul out onto land to bury their clutches like modern sea turtles.  The young, when hatching, 
 -->
