--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-26.jpg
+featured_image: /assets/images/posts/ink-2020-27.jpg
 featured: true
 hidden: true
 ---
@@ -228,14 +228,14 @@ Modern crocodilians are known to team up with ground-nesting birds to share nest
 
 I've given my *Dynamosuchus* cryptic coloring like a jaguar, for hiding amongst leaf litter.
 
-<!-- #### Day 27: Music
+#### Day 27: Music
 ![music](/assets/images/posts/ink-2020-27.jpg)
 
 This is *Wulong*, meaning "dancing dragon," a new microraptorine (four-winged "raptor" dinosaur) from Early Cretaceous China.  This one is doing a mating song and dance akin to a frigatebird, inflating its colorful display pouch for the females to see.
 
 Even though bird wings are pretty constrained by their function, there is still diversity in their shape, posture, and feathering.  Usually I see microraptorines depicted with songbird-like rounded wings; this one has more angular wings.  On a creature this size maybe that doesn't make sense, but it looks kind of cool and unusual.
 
-#### Day 28: Float
+<!-- #### Day 28: Float
 ![float](/assets/images/posts/ink-2020-28.jpg)
 
 Did you know that ankylosaurs (the armored, sometimes club-tailed dinosaurs) almost always fossilize upside-down?  It's because of a phenomenon called "bloat-n-float".  If a dead ankylosaur ends up in the water, the gases that build up in its belly during decomposition combined with the heavy osteoderm armor on its back cause the animal to flip over.  Eventually, the gases are released (sometimes explosively) and the carcass sinks and possibly fossilizes.
