ink 28 and dinophoto 3

--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-27.jpg
+featured_image: /assets/images/posts/ink-2020-28.jpg
 featured: true
 hidden: true
 ---
@@ -235,14 +235,14 @@ This is *Wulong*, meaning "dancing dragon," a new microraptorine (four-winged "r
 
 Even though bird wings are pretty constrained by their function, there is still diversity in their shape, posture, and feathering.  Usually I see microraptorines depicted with songbird-like rounded wings; this one has more angular wings.  On a creature this size maybe that doesn't make sense, but it looks kind of cool and unusual.
 
-<!-- #### Day 28: Float
+#### Day 28: Float
 ![float](/assets/images/posts/ink-2020-28.jpg)
 
 Did you know that ankylosaurs (the armored, sometimes club-tailed dinosaurs) almost always fossilize upside-down?  It's because of a phenomenon called "bloat-n-float".  If a dead ankylosaur ends up in the water, the gases that build up in its belly during decomposition combined with the heavy osteoderm armor on its back cause the animal to flip over.  Eventually, the gases are released (sometimes explosively) and the carcass sinks and possibly fossilizes.
 
 Here, a *Sinankylosaurus* corpse floats in a lake.  A nanhsiungchelyid turtle climbs aboard to rest.
 
-#### Day 29: Shoes
+<!-- #### Day 29: Shoes
 ![shoes](/assets/images/posts/ink-2020-29.jpg)
 
 You didn't think I'd be able to relate "shoes" to dinosaurs, did you?  Well, here is *Citipes* (meaning "fleet foot"), a caenagnathid oviraptorosaur who has put his foot through a beehive.  Was it on purpose, to eat the wax and grubs?  Or was it a discarded hive he accidentally stepped in?
@@ -257,5 +257,5 @@ Deep-water animals are always so scary.  I gave mine some bioluminescent spots s
 #### Day 31: Crawl
 ![crawl](/assets/images/posts/ink-2020-31.jpg)
 
-*Gunakadeit* was a thalattosaur from Late Triassic Alaska.  Thalattosaurs were a mysterious lineage of diapsid reptiles adapted to an aquatic lifestyle that only existed in the Triassic, that weird interbellum period between two of the Big Five mass extinctions, the Great Dying and the T-J boundary.  It's thought that they laid soft-shelled eggs like many other diapsid reptiles, and thus would have had to haul out onto land to bury their clutches like modern sea turtles.  The young, when hatching, 
+*Gunakadeit* was a thalattosaur from Late Triassic Alaska.  Thalattosaurs were a mysterious lineage of diapsid reptiles adapted to an aquatic lifestyle that only existed in the Triassic, that weird interbellum period between two of the Big Five mass extinctions, the Great Dying and the T-J boundary.  It's thought that they laid soft-shelled eggs like many other diapsid reptiles, and thus would have had to haul out onto land to bury their clutches like modern sea turtles.  The young, when hatching, would have then crawled to the sea--this is what these ones are doing now.
 -->
