--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-28.jpg
+featured_image: /assets/images/posts/ink-2020-29.jpg
 featured: true
 hidden: true
 ---
@@ -242,12 +242,12 @@ Did you know that ankylosaurs (the armored, sometimes club-tailed dinosaurs) alm
 
 Here, a *Sinankylosaurus* corpse floats in a lake.  A nanhsiungchelyid turtle climbs aboard to rest.
 
-<!-- #### Day 29: Shoes
+#### Day 29: Shoes
 ![shoes](/assets/images/posts/ink-2020-29.jpg)
 
 You didn't think I'd be able to relate "shoes" to dinosaurs, did you?  Well, here is *Citipes* (meaning "fleet foot"), a caenagnathid oviraptorosaur who has put his foot through a beehive.  Was it on purpose, to eat the wax and grubs?  Or was it a discarded hive he accidentally stepped in?
 
-#### Day 30: Ominous
+<!-- #### Day 30: Ominous
 ![ominous](/assets/images/posts/ink-2020-30.jpg)
 
 That's no fish--it's *Ophthalmothule*, a new cryptoclidid plesiosaur (one of the "Nessie" type aquatic reptiles).  It had huge eye sockets and was found in far northern marine deposits, indicating that it was an abyssal or nocturnal hunter.
