--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-29.jpg
+featured_image: /assets/images/posts/ink-2020-30.jpg
 featured: true
 hidden: true
 ---
@@ -247,15 +247,15 @@ Here, a *Sinankylosaurus* corpse floats in a lake.  A nanhsiungchelyid turtle cl
 
 You didn't think I'd be able to relate "shoes" to dinosaurs, did you?  Well, here is *Citipes* (meaning "fleet foot"), a caenagnathid oviraptorosaur who has put his foot through a beehive.  Was it on purpose, to eat the wax and grubs?  Or was it a discarded hive he accidentally stepped in?
 
-<!-- #### Day 30: Ominous
+#### Day 30: Ominous
 ![ominous](/assets/images/posts/ink-2020-30.jpg)
 
 That's no fish--it's *Ophthalmothule*, a new cryptoclidid plesiosaur (one of the "Nessie" type aquatic reptiles).  It had huge eye sockets and was found in far northern marine deposits, indicating that it was an abyssal or nocturnal hunter.
 
 Deep-water animals are always so scary.  I gave mine some bioluminescent spots so he can see a bit, but I'm not sure how realistic that would be for a diapsid reptile.  I also fear I may have made him too fishlike.  I was going for a fish-convergent face shape, but it ended up looking kind of just like a barracuda.
 
-#### Day 31: Crawl
+<!-- #### Day 31: Crawl
 ![crawl](/assets/images/posts/ink-2020-31.jpg)
 
-*Gunakadeit* was a thalattosaur from Late Triassic Alaska.  Thalattosaurs were a mysterious lineage of diapsid reptiles adapted to an aquatic lifestyle that only existed in the Triassic, that weird interbellum period between two of the Big Five mass extinctions, the Great Dying and the T-J boundary.  It's thought that they laid soft-shelled eggs like many other diapsid reptiles, and thus would have had to haul out onto land to bury their clutches like modern sea turtles.  The young, when hatching, would have then crawled to the sea--this is what these ones are doing now.
+*Gunakadeit* was a thalattosaur from Late Triassic Alaska.  Thalattosaurs were a mysterious lineage of diapsid reptiles adapted to an aquatic lifestyle that only existed in the Triassic, that weird interbellum period between two of the Big Five mass extinctions, the Great Dying and the T-J boundary.  It's thought that they laid soft-shelled eggs like many other diapsid reptiles, and thus would have had to haul out onto land to bury their clutches like modern sea turtles.  The young, when hatching, would have then crawled to the sea, possibly attracted by the moonlight, which is what these ones are doing now.
 -->
