--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-30.jpg
+featured_image: /assets/images/posts/ink-2020-31.jpg
 featured: true
 hidden: true
 ---
@@ -15,8 +15,6 @@ It's that time of year again!  I'm really excited to compare my efforts this yea
 ![inktober-2020](/assets/images/posts/inktober-2020.jpg)
 
 Last year I challenged myself to relate each prompt word to a Mesozoic reptile.  This year I'll do the same, but with the additional challenge of only drawing 2020 novataxa--that is, Mesozoic reptile genera named this year.  Don't worry, there are lots to choose from!
-
-Note that since the month isn't over, not all the drawings are posted yet.  I will update this post every day with a new one, so please check back to see more of my work later!
 
 #### Day 1: Fish
 ![fish](/assets/images/posts/ink-2020-1.jpg)
@@ -178,6 +176,8 @@ A pair of *Riabininohadros* (an iguanodont from Late Cretaceous Ukraine) share s
 
 *Vallibonavenatrix* is a new genus of spinosaurid from Early Cretaceous Spain.  With the new *Spinosaurus* swimmy tail discovered this year, we now know that these dinosaurs were even more convergent with crocs than previously thought.  Giving *Vallibonavenatrix* a laterally compressed tail makes her look just like a long-legged saltwater crocodile.
 
+I gave her a croc-style cloaca (a sagitally oriented slit) just because those were the only type I'd ever seen.  Turns out birds have square or round cloacae, and lizards have medially oriented slits.  However, brand-new [research](https://www.biorxiv.org/content/10.1101/2020.10.11.335398v1.full) describes the first preserved non-avian dinosaur cloaca known to science, in the small basal ceratopsian *Psittacosaurus*.  And guess what--it had a croc-style slit!  I got lucky!  That's not to say theropods like *Vallibonavenatrix* would've necessarily had the same style of cloaca, but it's at least plausible.
+
 #### Day 21: Sleep
 ![sleep](/assets/images/posts/ink-2020-21.jpg)
 
@@ -254,8 +254,16 @@ That's no fish--it's *Ophthalmothule*, a new cryptoclidid plesiosaur (one of the
 
 Deep-water animals are always so scary.  I gave mine some bioluminescent spots so he can see a bit, but I'm not sure how realistic that would be for a diapsid reptile.  I also fear I may have made him too fishlike.  I was going for a fish-convergent face shape, but it ended up looking kind of just like a barracuda.
 
-<!-- #### Day 31: Crawl
+#### Day 31: Crawl
 ![crawl](/assets/images/posts/ink-2020-31.jpg)
 
 *Gunakadeit* was a thalattosaur from Late Triassic Alaska.  Thalattosaurs were a mysterious lineage of diapsid reptiles adapted to an aquatic lifestyle that only existed in the Triassic, that weird interbellum period between two of the Big Five mass extinctions, the Great Dying and the T-J boundary.  It's thought that they laid soft-shelled eggs like many other diapsid reptiles, and thus would have had to haul out onto land to bury their clutches like modern sea turtles.  The young, when hatching, would have then crawled to the sea, possibly attracted by the moonlight, which is what these ones are doing now.
--->
+
+### Conclusion
+Even though I hadn't really touched traditional media since last Inktober, I think all the digital painting I've been doing has paid off.  This year's drawings are much more detailed and realistic than last year's, and I also incorporated a lot more views other than side views, which I think makes the drawings feel more active and alive.  That's not to say there's no room for improvement--there are numerous things I'd change in each piece if I were to do it again.  However, overall I'm really happy with this year's haul of ink.  
+
+Reddit has again been very supportive, including my friend from last year, u/jupiter1390, who did a lot of Cenozoic mammals this year and showed off their command of light and shadow.  The one r/Dinosaurs enjoyed the most was actually Day 28, Float--I think the divide between those who thought it was just a dinosaur peacefully backfloating and those who read the title and realized it was actually a macabre scenario drove some controversy and thus more engagement.  A close runner-up was Day 8, Teeth, which I think people thought was an interesting infographic.
+
+Focusing on Mesozoic reptile novataxa ended up being a fun challenge, and I'll probably do something similar next year.  Last year doing something like that I think would have been too restrictive, since I was just getting my paleoart legs under me, but now that I'm more familiar with the anatomy and inferred behavior of more extinct clades the shorter list helped me narrow my choices of subjects each day.
+
+Thanks for looking!  Stay tuned for more digital art coming soon.
