--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,9 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-31.jpg
-featured: true
-hidden: true
+featured_image: /assets/images/posts/ink-2020-7.jpg
 ---
 
 It's that time of year again!  I'm really excited to compare my efforts this year to [last year's](https://obscuredinosaurfacts.com/blog/post/2019/10/01/inktober.html), and see if/how I've improved.  Here's this year's prompt list:
@@ -226,7 +224,7 @@ Modern crocodilians are known to team up with ground-nesting birds to share nest
 
 *Dynamosuchus* was a bobcat-sized ornithosuchid pseudosuchian from early Late Triassic Brazil.  Ornithosuchids (meaning "bird croc" for some reason) were an early branch off the main croc tree that kind of pioneered the quadrupedal terrestrial predator strategy that would be further explored later by more famous pseudosuchians like *Fasolasuchus*, *Postosuchus*, and *Saurosuchus*.  Only four other genera of ornithosuchid are known, so the description of *Dynamosuchus* increases their diversity by 25%!
 
-I've given my *Dynamosuchus* cryptic coloring like a jaguar, for hiding amongst leaf litter.
+I've given my *Dynamosuchus* cryptic coloring like a jaguar, for hiding amongst leaf litter.  It's just a lucky coincidence that I sort of incorporated the other meaning of "hide" into this piece--his hide is what's colored.  Someone on Reddit pointed this out.
 
 #### Day 27: Music
 ![music](/assets/images/posts/ink-2020-27.jpg)
