--- a/_posts/2020-11-25-fall-art.md
+++ b/_posts/2020-11-25-fall-art.md
@@ -49,3 +49,7 @@ A kitsune mask?  A dragon?  No, it's *Proburnetia*, the dog-sized bump-headed Pe
 I decided to make my own interpretation of Andreas Preis's style for this one and do patterns inspired by *azulejos* (Portuguese traditional painted tiles) in the colored regions instead of just overlapping striped ribbons.  I'm not sure it's any good; I think maybe I mixed too many styles and the result is incoherent.  The overall shapes involved, composition, and coloration are reminiscent of Japanese kitsune or kabuki masks, which don't mix super readily with the Portuguese *azulejos*.
 
 Anyway, now I'm officially done with these.  I also made this one into a [coloring page](https://www.deviantart.com/roscoestar/art/Proburnetia-coloring-page-862104378) if you're interested in some paleo Zen time.
+
+![muttaburra](/assets/images/posts/muttaburra.png)
+
+I was watching the original *Walking With Dinosaurs* (yep, I haven't seen it til now! It holds up super well, would recommend) and when the British narrator said "*Muttaburrasaurus*" my fiancé said, "Nutter Butter Saurus?" and this was born.
